<resources>
    <string name="app_name">Exemplo3</string>
    <string name="cabecalho">Qual curso você deseja escolher:</string>
    <string name="ingles">Inglês</string>
    <string name="kantones">Kantones</string>
    <string name="frances">Francês</string>
     //removido a e string name Japones, para verifica se o erro perciste.
    <string name="Exibir">Exibir</string>
    <string name="Desmarcar">Desmarcar</string>
    <string name="Quantidade_De_Itens_Selecionados">Quantidade de itens selecionados:</string>


</resources>
